# aoc

./: README.md  pyproject.toml
aoc/: __main__.py  cli.py  io.py
aoc/solutions/day_01/: part_1.py  part_2.py
aoc/solutions/day_02/: part_1.py  part_2.py
aoc/solutions/day_03/: part_1.py  part_2.py
aoc/solutions/day_04/: part_1.py  part_2.py
aoc/solutions/day_05/: part_1.py  part_2.py
aoc/solutions/day_06/: common.py  part_1.py  part_2.py
